--- a/.gitignore
+++ b/.gitignore
@@ -126,7 +126,23 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
+# Файли з конфіденційними даними
+.env
 
+# Кеш Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Віртуальне середовище
+venv/
+env/
+ENV/
+
+# Інші файли які не мають бути в git
+.DS_Store
+.idea/
+.vscode/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
